fix overflow problems in mobile after changing route

--- a/assets/scss/globals/_global.scss
+++ b/assets/scss/globals/_global.scss
@@ -17,6 +17,10 @@ body {
   min-height: 100%;
   display: flex;
   width: 100%;
+
+  @media all and (max-width: 1023px) {
+    overflow: hidden;
+  }
 }
 
 .container {
